# Magic_Cards

./: .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json
CLI/: CLI.cpp  CLI.h  CMakeLists.txt
contracts/: ERC721.sol  IERC721.sol  IERC721Metadata.sol  IERC721Receiver.sol  MagicCard.sol
front/: README.md  package-lock.json  package.json
front/componenst/: ConnectWallet.tsx
front/src/: config.ts
front/src/app/: globals.css  layout.tsx  page.tsx
front/src/components/: ConnectWallet.tsx  MintButton.tsx  NFTCard.tsx  NFTGallery.tsx  NetworkErrorMessage.tsx  TransactionErrorMessage.tsx  UserNFTGallery.tsx  WaitingForTransactionMessage.tsx
front/src/typechain/: ERC721.ts  IERC721.ts  IERC721Metadata.ts  IERC721Receiver.ts  MagicCard.ts  index.ts
front/src/typechain/factories/: ERC721__factory.ts  IERC721Metadata__factory.ts  IERC721Receiver__factory.ts  IERC721__factory.ts  MagicCard__factory.ts  index.ts
scripts/: deploy.ts
test/: MagicCard.test.ts
